Update Web3Auth clientId

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         $('.btn-logged-in').hide()
         $('#sign-tx').hide()
 
-        const clientId =
-          'BBP_6GOu3EJGGws9yd8wY_xFT0jZIWmiLMpqrEMx36jlM61K9XRnNLnnvEtGpF-RhXJDGMJjL-I-wTi13RcBBOo' // get your clientId from https://dashboard.web3auth.io
+        const clientId = "BORM_trX_nKcp_60_gUJ3f0a0AJY-joB2WJdIxO2HyXfyQUaYdybZIK8QciNCFPPAK6iz8jbRFEqz487GYi2qkA" // get from https://dashboard.web3auth.io
 
         web3auth = new window.Web3auth.Web3Auth({
           clientId,
